--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "next": "12.1.5",
+    "notyf": "^3.10.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   }
