--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.1.5",
     "notyf": "^3.10.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1"
   }
 }
