--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.24"
   }
 }
