--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup": "node ./scripts/setup.js"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "chalk": "^4.1.2",
+    "chalk-animation": "^2.0.2",
     "dotenv": "^16.0.0",
+    "figlet": "^1.5.2",
+    "gradient-string": "^2.0.1",
+    "inquirer": "^8.2.4",
     "next": "12.1.5",
     "notyf": "^3.10.0",
     "react": "18.1.0",
