added major changes

--- a/data/projects.json
+++ b/data/projects.json
@@ -3,13 +3,15 @@
         {
             "title": "Some dummy title",
             "imageUrl": "",
-            "description": "",
+            "project_url": "",
+            "description": "some basi project description",
             "tags": [ "react", "postgresql", "nodejs" ]
         },
         {
             "title": "Some dummy title",
             "imageUrl": "",
-            "description": "",
+            "project_url": "",
+            "description": "some basi project description",
             "tags": [ "react", "postgresql", "nodejs" ]
         }
     ]
